force-app/main/default/objects/purecloud__PureCloud_Contact_List_Column__c/purecloud__PureCloud_Contact_List_Column__c.object-meta.xml
<CustomObject>
    <label>Genesys Cloud Contact List Column</label>
    <nameField>
        <label>Genesys Cloud Contact List Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Genesys Cloud Contact List Columns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>