force-app/main/default/objects/purecloud__PureCloud_Contact_List_Column__c/fields/purecloud__Agent_Owned_Column__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Agent_Owned_Column__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent Owned Column</label>
    <type>Checkbox</type>
</CustomField>