force-app/main/default/objects/purecloud__PureCloud_Contact_List_Column__c/fields/purecloud__Associated_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Associated_Object_Id__c</fullName>
    <label>Associated Object Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>