force-app/main/default/objects/purecloud__PureCloud_Contact_List_Column__c/fields/purecloud__Column_Name__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Column_Name__c</fullName>
    <label>Column Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>